Details
-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.10.0 Beta1
-
None
-
-
7304b6b8c (dev), f36c67b40 (dev), e5895bd97 (6.10), 35fac492b (6.10)
Description
Launching the Robot Arm example from Qt 6.10.0 Beta produces various warnings at runtime:
QQmlComponent: attempted to load via a relative URL 'qrc:Main/main.qml' in resource file system. This is not fully supported and may not work
qrc:/content/NodeIndicator.qml:38:9: Unable to assign [undefined] to QColor
qrc:/content/NodeIndicator.qml:38:9: Unable to assign [undefined] to QColor
qrc:/content/NodeIndicator.qml:38:9: Unable to assign [undefined] to QColor
qrc:/content/NodeIndicator.qml:38:9: Unable to assign [undefined] to QColor
qrc:/content/NodeIndicator.qml:38:9: Unable to assign [undefined] to QColor
Attachments
Issue Links
- is required for
-
QTBUG-137075 Make all Qt Application Examples warning free
-
- Open
-