examples/demos/robotarm/src/main.cpp
@@ -21,25 +21,8 @@ int main(int argc, char *argv[])
     QGuiApplication app(argc, argv);
 
     QQmlApplicationEngine engine;
-    const QUrl url(u"qrc:Main/main.qml"_s);
-    QObject::connect(
-            &engine,
-            &QQmlApplicationEngine::objectCreated,
-            &app,
-            [url](QObject *obj, const QUrl &objUrl) {
-                if (!obj && url == objUrl)
-                    QCoreApplication::exit(-1);
-            },
-            Qt::QueuedConnection);
 
-    engine.addImportPath(QCoreApplication::applicationDirPath() + "/qml");
     engine.addImportPath(":/");
-
-    engine.load(url);
-
-    if (engine.rootObjects().isEmpty()) {
-        return -1;
-    }
-
+    engine.loadFromModule("Main", "Main");
     return app.exec();
 }
